@startuml
abstract class burgerking.Persona
class burgerking.Administrador
class burgerking.Bebida
class burgerking.Cocineros
class burgerking.ControlIngreso
class burgerking.EntradaSalida
class burgerking.Gerentes
class burgerking.Hamburguesa
class burgerking.Inspectores
class burgerking.Main
class burgerking.Papa
class burgerking.Pedido
class burgerking.Sistema
class burgerking.Vendedor
burgerking.Administrador --|> burgerking.Persona
burgerking.Cocineros --|> burgerking.Persona
burgerking.Gerentes --|> burgerking.Persona
burgerking.Inspectores --|> burgerking.Persona
burgerking.Vendedor --|> burgerking.Persona
@enduml